@@ -1,3 +1,0 @@
-ExmanIDE is an integrated development environment for Python, written
-in Python.  Features include internationalization, simple project
-management, debugging, and C++ support.
