@@ -1,99 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 17:48:30 joerg Exp $
-bin/ExmanIDE
-share/ExmanIDE/About.py
-share/ExmanIDE/About.pyc
-share/ExmanIDE/About.pyo
-share/ExmanIDE/BackEnd.py
-share/ExmanIDE/BackEnd.pyc
-share/ExmanIDE/BackEnd.pyo
-share/ExmanIDE/COPYING
-share/ExmanIDE/Environment.py
-share/ExmanIDE/Environment.pyc
-share/ExmanIDE/Environment.pyo
-share/ExmanIDE/ExmanConfig.py
-share/ExmanIDE/ExmanConfig.pyc
-share/ExmanIDE/ExmanConfig.pyo
-share/ExmanIDE/ExmanIDE.exprj
-share/ExmanIDE/ExmanIDE.pyw
-share/ExmanIDE/ExmanUpdaterClient.py
-share/ExmanIDE/ExmanUpdaterClient.pyc
-share/ExmanIDE/ExmanUpdaterClient.pyo
-share/ExmanIDE/FrontEnd.py
-share/ExmanIDE/FrontEnd.pyc
-share/ExmanIDE/FrontEnd.pyo
-share/ExmanIDE/InitDebug.py
-share/ExmanIDE/InitDebug.pyc
-share/ExmanIDE/InitDebug.pyo
-share/ExmanIDE/InitExecute.py
-share/ExmanIDE/InitExecute.pyc
-share/ExmanIDE/InitExecute.pyo
-share/ExmanIDE/Language.py
-share/ExmanIDE/Language.pyc
-share/ExmanIDE/Language.pyo
-share/ExmanIDE/Profile.py
-share/ExmanIDE/Profile.pyc
-share/ExmanIDE/Profile.pyo
-share/ExmanIDE/Project.py
-share/ExmanIDE/Project.pyc
-share/ExmanIDE/Project.pyo
-share/ExmanIDE/README.txt
-share/ExmanIDE/SourceEditor.py
-share/ExmanIDE/SourceEditor.pyc
-share/ExmanIDE/SourceEditor.pyo
-share/ExmanIDE/StcStyle.py
-share/ExmanIDE/StcStyle.pyc
-share/ExmanIDE/StcStyle.pyo
-share/ExmanIDE/Stdin.py
-share/ExmanIDE/Stdin.pyc
-share/ExmanIDE/Stdin.pyo
-share/ExmanIDE/TotalExplorer.py
-share/ExmanIDE/TotalExplorer.pyc
-share/ExmanIDE/TotalExplorer.pyo
-share/ExmanIDE/explorericon.py
-share/ExmanIDE/explorericon.pyc
-share/ExmanIDE/explorericon.pyo
-share/ExmanIDE/gen_python_api.py
-share/ExmanIDE/gen_python_api.pyc
-share/ExmanIDE/gen_python_api.pyo
-share/ExmanIDE/getext.py
-share/ExmanIDE/getext.pyc
-share/ExmanIDE/getext.pyo
-share/ExmanIDE/icon.py
-share/ExmanIDE/icon.pyc
-share/ExmanIDE/icon.pyo
-share/ExmanIDE/images.py
-share/ExmanIDE/images.pyc
-share/ExmanIDE/images.pyo
-share/ExmanIDE/images/1rightarrow.png
-share/ExmanIDE/images/dbgrun.png
-share/ExmanIDE/images/dbgrunto.png
-share/ExmanIDE/images/dbgstep.png
-share/ExmanIDE/images/fileclose.png
-share/ExmanIDE/images/filenew.png
-share/ExmanIDE/images/fileopen.png
-share/ExmanIDE/images/fileopen16.png
-share/ExmanIDE/images/fileopen_darkblue.png
-share/ExmanIDE/images/filesave.png
-share/ExmanIDE/images/icon.xpm
-share/ExmanIDE/images/player_stop.png
-share/ExmanIDE/images/projectwizard.png
-share/ExmanIDE/images/splash.png
-share/ExmanIDE/md5sum.py
-share/ExmanIDE/md5sum.pyc
-share/ExmanIDE/md5sum.pyo
-share/ExmanIDE/portalocker.py
-share/ExmanIDE/portalocker.pyc
-share/ExmanIDE/portalocker.pyo
-share/ExmanIDE/python.api
-share/ExmanIDE/safe.py
-share/ExmanIDE/safe.pyc
-share/ExmanIDE/safe.pyo
-share/ExmanIDE/tcplog.py
-share/ExmanIDE/tcplog.pyc
-share/ExmanIDE/tcplog.pyo
-share/ExmanIDE/timeoutsocket.py
-share/ExmanIDE/timeoutsocket.pyc
-share/ExmanIDE/timeoutsocket.pyo
-share/ExmanIDE/udplog.py
-share/ExmanIDE/udplog.pyc
-share/ExmanIDE/udplog.pyo
