@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.4020 2023/06/26 11:51:03 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.4021 2023/06/26 11:51:36 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -5587,3 +5587,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Removed audio/tunapie [wiz 2023-06-26]
 	Removed cad/boolean [wiz 2023-06-26]
 	Removed cross/bossa [wiz 2023-06-26]
+	Removed devel/ExmanIDE [wiz 2023-06-26]
